# kgqa_signatures

./: .gitignore  README.md  link_entities_from_lm_results.py  pyproject.toml
kgqa_signatures/: config.py  dataset.py  experiment.ipynb  logger.py  main.py  parse_wikidata_dump.py  signature.py  triples2lgl.py
kgqa_signatures/utils/: joblib_memory_cache_backend.py
kgqa_signatures/wikidata/: abstract_service.py  api.py  service.py  service_igraph.py  sparql_condition.py
kgqa_signatures/wikidata/cache/joblib/kgqa_signatures/wikidata/api/execute_sparql_request/: func_code.py
wikidata_processor/: config.py  dataset.py  logger.py  main.py  signature.py
wikidata_processor/wikidata/: api.py  service.py  sparql_condition.py
