[tool.poetry]
name = "kgqa_signatures"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
scikit-learn = "^1.3.1"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.25.2"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
